# cdemo

./: .gitignore  CMakeLists.txt
base/: string_convert.hpp  string_utility.hpp
demo/: A.h  B.h  TraceNew.h  a.out  demo.cpp  demo1_chars.cpp  demo1_string.cpp  demo2.cpp  demo3_thread_local.cpp  demo4.cpp  demo4_va_start_end.cpp  for_auto.cpp  mem_align.cpp  my_share_ptr.cpp  test_B.cpp  test_move.cpp  test_return_this.cpp  test_share_ptr.cpp  test_smart_ptr.cpp  variadic_templates.cpp  vector.cpp
demo/ptr/: Counter.cpp  SharePtr.cpp  WeakPtr.cpp
demo1/: MemTrack.cpp  MemTrack.h  a.out  demo1.cpp  demo2.cpp  demo3.cpp
demo1/demo2/: a.out  demo2_test.cpp
demo2/: Demo2.cpp  Demo2.h  Stu.h  a.out  demo2_test1.cpp  demo2_test2.c  demo2_test3.cpp  demo2_test4.cpp  libdemo5.dylib
demo2/libdemo6/: __.SYMDEF SORTED
demo3/: CMakeLists.txt
demo3/include/: test.h
demo4/: CMakeLists.txt  test.c
demo5/: CMakeLists.txt  demo5_test.c  demo5_test.h
demo6/: CMakeLists.txt  test.cpp  test.h
demo7/: CMakeLists.txt  test.cpp  test.h
demo8/lib1/: CMakeLists.txt  libdemo6.dylib  main.cpp  test_warpper_lib1.cpp  test_warpper_lib1.h
demo8/lib2/: CMakeLists.txt  test.h  test_warpper_lib2.cpp  test_warpper_lib2.h
demo8/test/: CMakeLists.txt  main.cpp
demo9/: a.out  new_delete.cpp  readme.txt  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  typeid_demo.cpp
doc/: note.md
files/: threadpool.cpp  threadpool_test.cpp
include/: Moveable1.h  Object.cpp  Object.h  empty_class.h  offsetof.h  student.cpp  student.h  test_forward.h  thread_pool.hpp
shell/: template.txt  test1.sh  tts.h
src/: Thread_Test.hpp  main.cpp  singleton.hpp
